Avoid warning about wrong position attribute of parent elem of Image

--- a/src/app/[albumName]/[fileName]/PhotoContainer.module.css
+++ b/src/app/[albumName]/[fileName]/PhotoContainer.module.css
@@ -1,7 +1,7 @@
 .PhotoContainer {
-
+  position: relative;
+  height: 100%;
 }
-
 
 .Photo {
   object-fit: contain;
